# bevy-sensor

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  GEMINI.md  LICENSE  README.md  WEBGPU_RESEARCH.md  justfile  program.md  release-plz.toml  results.tsv
.claude/: settings.json
.github/workflows/: ci.yml  release-plz.yml
assets/: ycb
examples/: batch_render_neocortx.rs  diagnose_wgpu.rs  persistent_per_step.rs  readme_showcase.rs  save_render.rs  test_render.rs  verify_output.rs  webgpu_render.rs  wgpu_direct_test.rs
src/: backend.rs  batch.rs  benchmark.rs  cache.rs  fixtures.rs  lib.rs  main.rs  render.rs
tests/: render_benchmark.rs  render_integration.rs  spatial_parity.rs  ycb_public_api.rs  ycbust_contract.rs  ycbust_network_smoke.rs  ycbust_s3_integration.rs
