[package]
name = "bevy-sensor"
version = "0.1.0"
edition = "2021"
description = "Bevy library for capturing multi-view images of 3D OBJ models (YCB dataset) for sensor simulation"
license = "MIT"
repository = "https://github.com/killerapp/bevy-sensor"
homepage = "https://github.com/killerapp/bevy-sensor"
readme = "README.md"
keywords = ["bevy", "sensor", "3d", "ycb", "simulation"]
categories = ["game-development", "rendering", "simulation"]
exclude = [".github", "target", "captures", "assets"]

[dependencies]
# Disable default features to avoid system dependencies (alsa, libudev)
# Enable only what's needed for headless rendering
bevy = { version = "0.11", default-features = false, features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_render",
    "bevy_scene",
    "bevy_winit",
    "png",
    "x11",  # For windowing on Linux
] }
bevy_obj = { version = "0.11", features = ["scene"] }
ycbust = "0.2.3"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
