[package]
name = "bevy-sensor"
version = "0.4.1"
edition = "2021"
description = "Bevy library for capturing multi-view images of 3D OBJ models (YCB dataset) for sensor simulation"
license = "MIT"
repository = "https://github.com/killerapp/bevy-sensor"
homepage = "https://github.com/killerapp/bevy-sensor"
readme = "README.md"
keywords = ["bevy", "sensor", "3d", "ycb", "simulation"]
categories = ["game-development", "rendering", "simulation"]
exclude = [".github", "target", "captures", "assets"]

[dependencies]
# Disable default features to avoid system dependencies (alsa, libudev)
# Enable only what's needed for headless rendering
bevy = { version = "0.15", default-features = false, features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_render",
    "bevy_scene",
    "bevy_state",      # Required in 0.15+
    "bevy_winit",
    "png",
    "x11",             # For windowing on Linux
    "tonemapping_luts", # Required for tonemapping
    "ktx2",            # Required for some textures
    "zstd",            # Compression for ktx2
] }
bevy_obj = { version = "0.15", features = ["scene"] }
ycbust = "0.2.4"
image = "0.25"  # For saving PNG/depth images
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tempfile = "3.10"

[[bin]]
name = "prerender"
path = "src/bin/prerender.rs"
required-features = []
