[package]
name = "bevy-sensor"
version = "0.5.1"
edition = "2021"
description = "Bevy library for capturing multi-view images of 3D OBJ models (YCB dataset) for sensor simulation"
license = "MIT"
repository = "https://github.com/killerapp/bevy-sensor"
homepage = "https://github.com/killerapp/bevy-sensor"
readme = "README.md"
keywords = ["bevy", "sensor", "3d", "ycb", "simulation"]
categories = ["game-development", "rendering", "simulation"]
exclude = [".github", "target", "captures", "assets", "WEBGPU_RESEARCH.md", "CLAUDE.md", "GEMINI.md"]

[dependencies]
# Disable default features to avoid system dependencies (alsa, libudev)
# Enable only what's needed for headless rendering
bevy = { version = "0.15.3", default-features = false, features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_render",
    "bevy_scene",
    "bevy_state",      # Required in 0.15+
    "bevy_winit",
    "png",
    "x11",             # For windowing on Linux
    "tonemapping_luts", # Required for tonemapping
    "ktx2",            # Required for some textures
    "zstd",            # Compression for ktx2
] }
bevy_obj = { version = "0.15", features = ["scene"] }
ycbust = { version = "0.4.1", features = ["blocking"] }
image = "0.25"  # For saving PNG/depth images
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = "0.11"

[features]
default = []
# Enable ycbust's S3 streaming support for integration tests that exercise
# the upstream `ycbust::s3` surface. Not used by runtime code.
ycbust-s3 = ["ycbust/s3"]

[dev-dependencies]
tempfile = "3.10"
pollster = "0.4.0"
wgpu = "24.0"
# For `ycbust_contract_error_from_and_into_anyhow` — verifies the bidirectional
# `YcbError` ↔ `anyhow::Error` conversion upstream guarantees.
anyhow = "1.0"

[[bin]]
name = "prerender"
path = "src/bin/prerender.rs"
required-features = []
